app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 49 100% 95%;
    --foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;

    --radius: 0.5rem;

    --chatbot-background: #e3e3e3;
    --chatbot-input-background: #404040;
    --chatbot-input-placeholder: #dddddd;
    --chatbot-border: #202020;
    --chatbot-input-text: #e0e0e0;
    --chatbot-user-text-background: #262626;
    --chatbot-user-text: #dedede;
  }

  .dark {
    --background: 256 100% 5%;
    --foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;

    --chatbot-background: #252525;
    --chatbot-input-background: #393939;
    --chatbot-input-placeholder: #979797;
    --chatbot-border: #757575;
    --chatbot-input-text: #a9a9a9;
    --chatbot-user-text-background: #e0e0e0;
    --chatbot-user-text: #323232;
  }
}

/* * {
  color: #979797;
} */

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

/* SCROLLBAR */

* {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
}

*::-webkit-scrollbar {
  width: 0px;
}

*::-webkit-scrollbar-thumb {
  background-color: transparent;
}

*::-webkit-scrollbar-track {
  background-color: transparent;
}

/* FONT */

.colorful-text {
  background-image: linear-gradient(
    to right,
    #a855f7,
    #9333ea,
    #6d28d9,
    #2563eb,
    #0ea5e9,
    #22d3ee
  );
  color: transparent;
  -webkit-background-clip: text;
}

.gold-text {
  background-image: linear-gradient(
    to right,
    #573e3d 0,
    #cb9b51 22%,
    #b4980b 45%,
    #9d9307 50%,
    #b4980b 55%,
    #cb9b51 78%,
    #573e3d 100%
  );
  color: transparent;
  -webkit-background-clip: text;
}

/* MIST */
.mist {
  background: linear-gradient(125deg, #a855f7 3%, #6d28d9 52%);
  -webkit-mask: radial-gradient(circle at 25% 50%, black 0%, transparent 25%);
  mask: radial-gradient(circle at 20% 50%, black 0%, transparent 25%);
  pointer-events: none;
  animation: mistMove 30s linear infinite alternate;
}

.mobile-mist {
  background: linear-gradient(125deg, #a855f7 3%, #6d28d9 52%);
  -webkit-mask: radial-gradient(circle at 25% 50%, black 0%, transparent 25%);
  mask: radial-gradient(circle at 20% 50%, black 0%, transparent 25%);
  pointer-events: none;
}

@keyframes mistMove {
  0% {
    transform: translate(1000px, 150px);
  }
  50% {
    transform: translate(600px, -50px);
  }
  100% {
    transform: translate(200px, -250px);
  }
}

/* CURSOR */
*,
*::after,
*::before {
  cursor: none !important;
}

/* CHATBOT */
.react-chatbot-kit-chat-container {
  border: 1px solid var(--chatbot-border) !important;
  border-radius: 15px !important;
}

.react-chatbot-kit-chat-inner-container {
  background: var(--chatbot-background) !important;
  border-radius: 15px !important;
}

.react-chatbot-kit-chat-input-container {
}

.react-chatbot-kit-chat-message-container {
}

.react-chatbot-kit-chat-input {
  border: none !important;
  border-radius: 0 0 0 15px !important;
  background: var(--chatbot-input-background) !important;
  color: var(--chatbot-input-text) !important;
}

.react-chatbot-kit-chat-input-form {
}

.react-chatbot-kit-chat-input::placeholder {
  color: var(--chatbot-input-placeholder) !important;
}

.react-chatbot-kit-chat-btn-send {
  background: #2563eb !important;
  border-radius: 0 0 15px 0 !important;
}

.react-chatbot-kit-chat-btn-send:hover {
  background: #1d4ed8 !important;
}

.react-chatbot-kit-user-chat-message {
  background: var(--chatbot-user-text-background) !important;
  color: var(--chatbot-user-text) !important;
}

.react-chatbot-kit-user-chat-message-arrow {
  border-left: 8px solid var(--chatbot-user-text-background) !important;
}

.react-chatbot-kit-chat-btn-send-icon {
}

.react-chatbot-kit-chat-bot-message-container {
}

.react-chatbot-kit-chat-bot-avatar-container {
}

.react-chatbot-kit-chat-bot-avatar-icon {
}

.react-chatbot-kit-chat-bot-avatar-letter {
}

.react-chatbot-kit-chat-bot-message {
  background: #2563eb !important;
}

.react-chatbot-kit-chat-bot-message-arrow {
  border-right: 8px solid #2563eb !important;
}

.react-chatbot-kit-chat-bot-loading-icon-container {
}

.chatbot-loader-container {
}

